--- a/src/app/modules/curso-python/pages/curso-python/curso-python.component.css
+++ b/src/app/modules/curso-python/pages/curso-python/curso-python.component.css
@@ -308,7 +308,18 @@ img {
 }
 .tyc-subtitle{
     color:rgb(23, 46, 148);
-    font-size:1.4rem;
+    font-size:1.6rem;
+    margin:1.5rem 20px 5px;
+}
+.tyc-item{
+    color:rgb(23, 46, 148);
+    font-size:1.3rem;
+    margin:0.5rem 0 0 20px;
+}
+.tyc-text{
+    font-size: larger;
+    margin:0;
+    padding:0 20px;
 }
 /** tomado de team component css */
 
