--- a/src/app/modules/iot/pages/iot/iot.component.html
+++ b/src/app/modules/iot/pages/iot/iot.component.html
@@ -20,23 +20,14 @@
         </div>
     </div>
 
-    <!-- <div>
-        <div class="d-flex flex-row-reverse">
-            <button class="goback-button">
-                <a href="https://bit.ly/Python1C2022" class="button-text">
-                    {{ 'PYTHONCOURSES.ENROLLBUTTON' | translate }} </a>
-            </button>
-        </div>
-    </div> -->
-
     <!-- Introductory text -->
     <div>
         <h2 class="course-subtitle">{{ 'IOT.DESC.TITLE' | translate }}</h2>
-        <p>{{ 'IOT.DESC.TEXT.1' | translate }}</p>
-        <p>{{ 'IOT.DESC.TEXT.2' | translate }}</p>
-        <p>{{ 'IOT.DESC.TEXT.3' | translate }}</p>
-        <p>{{ 'IOT.DESC.TEXT.4' | translate }}</p>
-        <p>{{ 'IOT.DESC.TEXT.5' | translate }}</p>
+        <p class="desc-text">{{ 'IOT.DESC.TEXT.1' | translate }}</p>
+        <p class="desc-text">{{ 'IOT.DESC.TEXT.2' | translate }}</p>
+        <p class="desc-text">{{ 'IOT.DESC.TEXT.3' | translate }}</p>
+        <p class="desc-text">{{ 'IOT.DESC.TEXT.4' | translate }}</p>
+        <p class="desc-text">{{ 'IOT.DESC.TEXT.5' | translate }}</p>
         <h2 class="course-subtitle">{{ 'IOT.GALLERY_TITLE' | translate }}</h2>
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
@@ -66,9 +57,7 @@
           </div>
     </div>
 
-
     <app-footer></app-footer>
 
 </body>
-
 </html>
