--- a/src/app/modules/curso-python/pages/curso-python/curso-python.component.css
+++ b/src/app/modules/curso-python/pages/curso-python/curso-python.component.css
@@ -314,12 +314,15 @@ img {
 .tyc-item{
     color:rgb(23, 46, 148);
     font-size:1.3rem;
-    margin:0.5rem 0 0 20px;
+    margin:0.5rem 0 0.5rem 20px;
 }
 .tyc-text{
     font-size: larger;
     margin:0;
     padding:0 20px;
+    word-wrap: break-word;
+    white-space: pre-line;
+    word-break: break-word;
 }
 /** tomado de team component css */
 
