change href to router link on events and dropdown style

--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -30,6 +30,11 @@
         <button onclick="window.location.href = '/team'" class="buttonNavbar" type="button">{{ 'NAVBAR.TEAM' | translate
           }}</button>
       </li>
+      <mat-menu #institutionalMenu="matMenu" xPosition="before" yPosition="below">
+        <button mat-menu-item [routerLink]=['/team']>{{ 'NAVBAR.TEAM' | translate }}</button>
+        <button mat-menu-item onclick="window.location.href = 'https://csitba.web.app/'">CS</button>
+        <button mat-menu-item onclick="window.location.href = 'https://linktr.ee/wie_itba'">WIE</button>
+      </mat-menu>
       <li class="nav-item">
         <button onclick="window.location.href = '/contact'" class="buttonNavbar" type="button">{{ 'NAVBAR.CONTACT' |
           translate
