refactor: event cards code moved to shared component

--- a/src/app/modules/events/pages/events/events.component.html
+++ b/src/app/modules/events/pages/events/events.component.html
@@ -32,184 +32,9 @@
 
       <!-- new card grid -->
       <ul class="card-listing">
-        <!--IEEExtreme-->
-        <li>
-          <a [routerLink]="['/ieeextreme']">
-            <mat-card class="event-card">
-              <div class="image-with-text">
-                <img
-                  mat-card-img
-                  src="https://i.ibb.co/YNBZxNs/ieee-extreme.jpg"
-                  alt="Foto de competicion IEEExtreme"
-                  class="event-card-img ieeextreme-filter"
-                />
-                <p class="text-on-image ieeextreme-text">
-                  {{ "HOME.IEEEXTREME.TITLE" | translate }}
-                </p>
-              </div>
-              <mat-card-content class="mt-2">
-                <mat-card-title>{{
-                  "HOME.IEEEXTREME.TITLE" | translate
-                }}</mat-card-title>
-                <p class="lead">{{ "HOME.IEEEXTREME.TEXT" | translate }}</p>
-                <a class="link-text" [routerLink]="['/ieeextreme']">
-                  <h5 class="waves-light" mdbWavesEffect>
-                    {{ "HOME.SEEMORE" | translate }}
-                    <mdb-icon
-                      fas
-                      icon="chevron-right"
-                      class="waves-light"
-                      mdbWavesEffect
-                    ></mdb-icon>
-                  </h5>
-                </a>
-              </mat-card-content>
-            </mat-card>
-          </a>
-        </li>
-
-        <!--Clases de Pyhton-->
-        <li>
-          <a [routerLink]="['/cursospython']">
-            <mat-card class="event-card">
-              <div class="image-with-text">
-                <img
-                  mat-card-img
-                  src="https://i.ibb.co/q1QyW01/cursopython.jpg"
-                  alt="Foto de los cursos de Python"
-                  class="event-card-img cursopython-filter"
-                />
-                <p class="text-on-image cursopython-text">
-                  {{ "HOME.CLASSES.TITLE" | translate }}
-                </p>
-              </div>
-              <mat-card-content class="mt-2">
-                <mat-card-title>{{
-                  "HOME.CLASSES.TITLE" | translate
-                }}</mat-card-title>
-                <p class="lead">{{ "HOME.CLASSES.TEXT" | translate }}</p>
-                <a class="link-text" [routerLink]="['/cursospython']">
-                  <h5 class="waves-light" mdbWavesEffect>
-                    {{ "HOME.SEEMORE" | translate }}
-                    <mdb-icon
-                      fas
-                      icon="chevron-right"
-                      class="waves-light"
-                      mdbWavesEffect
-                    ></mdb-icon>
-                  </h5>
-                </a>
-              </mat-card-content>
-            </mat-card>
-          </a>
-        </li>
-
-        <!--Bitcup-->
-        <li>
-          <a [routerLink]="['/bitcup']">
-            <mat-card class="event-card">
-              <div class="image-with-text">
-                <img
-                  mat-card-img
-                  src="../../../../../assets/image/courses/bitcup-logo.jpeg"
-                  alt="Foto de los cursos de Python"
-                  class="event-card-img bitcup-filter"
-                />
-                <p class="text-on-image bitcup-text">
-                  {{ "HOME.BITCUP.TITLE" | translate }}
-                </p>
-              </div>
-              <mat-card-content class="mt-2">
-                <mat-card-title>{{
-                  "HOME.BITCUP.TITLE" | translate
-                }}</mat-card-title>
-                <p class="lead">{{ "HOME.BITCUP.TEXT" | translate }}</p>
-                <a class="link-text" [routerLink]="['/error401']">
-                  <h5 class="waves-light" mdbWavesEffect>
-                    {{ "HOME.SEEMORE" | translate }}
-                    <mdb-icon
-                      fas
-                      icon="chevron-right"
-                      class="waves-light"
-                      mdbWavesEffect
-                    ></mdb-icon>
-                  </h5>
-                </a>
-              </mat-card-content>
-            </mat-card>
-          </a>
-        </li>
-
-        <!--Curso de análisis de datos-->
-        <li>
-          <a [routerLink]="['/data-analysis']">
-            <mat-card class="event-card">
-              <div class="image-with-text">
-                <img
-                  mat-card-img
-                  src="../../../../../assets/image/courses/data-analysis-event.png"
-                  alt="Foto de curso analisis de datos"
-                  class="event-card-img cursoanalisis-filter"
-                />
-                <p class="text-on-image cursoanalisis-text">
-                  {{ "HOME.DATAANALYSIS.TITLE" | translate }}
-                </p>
-              </div>
-              <mat-card-content class="mt-2">
-                <mat-card-title>{{
-                  "HOME.DATAANALYSIS.TITLE" | translate
-                }}</mat-card-title>
-                <p class="lead">{{ "HOME.DATAANALYSIS.TEXT" | translate }}</p>
-                <a class="link-text" [routerLink]="['/data-analysis']">
-                  <h5 class="waves-light" mdbWavesEffect>
-                    {{ "HOME.SEEMORE" | translate }}
-                    <mdb-icon
-                      fas
-                      icon="chevron-right"
-                      class="waves-light"
-                      mdbWavesEffect
-                    ></mdb-icon>
-                  </h5>
-                </a>
-              </mat-card-content>
-            </mat-card>
-          </a>
-        </li>
-
-        <!--Asimov Cup-->
-        <li>
-          <a [routerLink]="['/asimovcup']">
-            <mat-card class="event-card">
-              <div class="image-with-text">
-                <img
-                  mat-card-img
-                  src="../../../../../assets/image/courses/asimov-cup-logo.png"
-                  alt="Logo de la Asimov Cup"
-                  class="event-card-img asimovcup-filter"
-                />
-                <p class="text-on-image asimovcup-text">
-                  {{ "HOME.ASIMOVCUP.TITLE" | translate }}
-                </p>
-              </div>
-              <mat-card-content class="mt-2">
-                <mat-card-title>{{
-                  "HOME.ASIMOVCUP.TITLE" | translate
-                }}</mat-card-title>
-                <p class="lead">{{ "HOME.ASIMOVCUP.TEXT" | translate }}</p>
-                <a class="link-text" [routerLink]="['/asimovcup']">
-                  <h5 class="waves-light" mdbWavesEffect>
-                    {{ "HOME.SEEMORE" | translate }}
-                    <mdb-icon
-                      fas
-                      icon="chevron-right"
-                      class="waves-light"
-                      mdbWavesEffect
-                    ></mdb-icon>
-                  </h5>
-                </a>
-              </mat-card-content>
-            </mat-card>
-          </a>
+        <li *ngFor="let event of events; index as i">
+          <app-event-card [event]="event" [index]="i">
+          </app-event-card>
         </li>
       </ul>
     </div>
