--- a/src/app/modules/mainpage/pages/mainpage/mainpage.component.html
+++ b/src/app/modules/mainpage/pages/mainpage/mainpage.component.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
+  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
 </head>
 
 <header>
@@ -16,10 +17,7 @@
   </div>
 </header>
 
-
-
 <!-- Inicio -->
-
 
 <body>
   <!-- IEEENews -->
@@ -51,19 +49,25 @@
         <app-loading-spinner></app-loading-spinner>
       </div>
       <div *ngIf="latestNews">
-        <owl-carousel-o [options]="customOptions">
-          <ng-container *ngFor="let noticia of latestNews">
-            <ng-template carouselSlide >
+        <div class="carousel-wrapper">
+          <div class="pagination-prev-wrapper">
+            <span class="swiper-button-prev pagination-prev"></span>
+          </div>
+          <swiper [config]="swiperConfig">
+            <ng-container *ngFor="let noticia of latestNews">
+              <ng-template swiperSlide>
                 <app-news-card [noticia]="noticia"></app-news-card>
-            </ng-template>
-          </ng-container>
-        </owl-carousel-o>
+              </ng-template>
+            </ng-container>
+          </swiper>
+          <div class="pagination-next-wrapper">
+            <span class="swiper-button-next pagination-next"></span>
+          </div>
+        </div>
+        <div class="pagination-wrapper"></div>
       </div>
-
     </mat-card>
-
   </div>
-
 
   <!-- Educacion, Competencia, Contacto -->
   <div *ngIf="false">
@@ -115,8 +119,6 @@
       </div>
     </div>
   </div>
-
-
 
   <div *ngIf="false">
     <!-- Iniciativas -->
@@ -190,24 +192,18 @@
           </div>
 
           <mdb-card-body>
-
             <mdb-card-title>
               <h4>{{ 'HOME.CS.TITLE' | translate }}</h4>
             </mdb-card-title>
-
             <hr>
-
             <mdb-card-text>{{ 'HOME.CS.TEXT' | translate }}</mdb-card-text>
-
             <!-- <a class="link-text">
             <h5 class="waves-light" mdbWavesEffect>{{ 'HOME.SEEMORE' | translate }}
               <mdb-icon fas icon="chevron-right" class="waves-light" mdbWavesEffect></mdb-icon>
             </h5>
           </a> -->
           </mdb-card-body>
-
         </mdb-card>
-
       </div>
     </div>
   </div>
@@ -216,9 +212,7 @@
   <div class="bottomLine mt-4">
     <div class="row">
       <h1 class="section-title">{{ "HOME.SPONSORS" | translate }}</h1>
-
       <br>
-
       <div class="container">
         <div class="row" style="margin-top: 2vmin;">
             <div class="col-sm mt-5 mt-md-2">
@@ -242,16 +236,11 @@
             <div class="col-sm mt-5 mt-md-4">
                 <img src="../../../../../assets/image/content/flowics_logo-horizontal-full-color.png" height="70vmin" alt="Logo flowics"
                      style="position: relative; top: 50%; transform: translateY(-50%); ">
-            </div>    
+            </div>
         </div>
       </div>
-
-
     </div>
   </div>
-
-
-
 </body>
 <app-footer></app-footer>
 
