--- a/src/app/modules/mainpage/pages/mainpage/mainpage.component.html
+++ b/src/app/modules/mainpage/pages/mainpage/mainpage.component.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
   </head>
 
   <header>
@@ -61,13 +62,22 @@
           <app-loading-spinner></app-loading-spinner>
         </div>
         <div *ngIf="latestNews">
-          <owl-carousel-o [options]="customOptions">
-            <ng-container *ngFor="let noticia of latestNews">
-              <ng-template carouselSlide>
-                <app-news-card [noticia]="noticia"></app-news-card>
-              </ng-template>
-            </ng-container>
-          </owl-carousel-o>
+          <div class="carousel-wrapper">
+            <div class="pagination-prev-wrapper">
+              <span class="swiper-button-prev pagination-prev"></span>
+            </div>
+            <swiper [config]="swiperConfig">
+              <ng-container *ngFor="let noticia of latestNews">
+                <ng-template swiperSlide>
+                  <app-news-card [noticia]="noticia"></app-news-card>
+                </ng-template>
+              </ng-container>
+            </swiper>
+            <div class="pagination-next-wrapper">
+              <span class="swiper-button-next pagination-next"></span>
+            </div>
+          </div>
+          <div class="pagination-wrapper"></div>
         </div>
       </mat-card>
     </div>
@@ -76,55 +86,46 @@
     <div *ngIf="false">
       <div class="bottomLine">
         <div class="card-group">
+
           <!-- Educacion -->
           <mdb-card>
-            <mdb-card-img
-              src="https://i.ibb.co/6mLnt2t/education.jpg"
-              alt="Foto de Curso de Python"
-            ></mdb-card-img>
+            <mdb-card-img src="https://i.ibb.co/6mLnt2t/education.jpg" alt="Foto de Curso de Python"></mdb-card-img>
             <mdb-card-body>
+
               <mdb-card-title>
-                <h4>{{ "HOME.EDUCATION.TITLE" | translate }}</h4>
+                <h4>{{ 'HOME.EDUCATION.TITLE' | translate }}</h4>
               </mdb-card-title>
 
-              <mdb-card-text>{{
-                "HOME.EDUCATION.TEXT" | translate
-              }}</mdb-card-text>
+              <mdb-card-text>{{ 'HOME.EDUCATION.TEXT' | translate }}</mdb-card-text>
+
             </mdb-card-body>
           </mdb-card>
 
           <!-- Competencia -->
           <mdb-card>
-            <mdb-card-img
-              src="https://i.ibb.co/YX53J4W/competition.jpg"
-              alt="Foto de Competencia de programacion"
-            >
+            <mdb-card-img src="https://i.ibb.co/YX53J4W/competition.jpg" alt="Foto de Competencia de programacion">
             </mdb-card-img>
             <mdb-card-body>
+
               <mdb-card-title>
-                <h4>{{ "HOME.COMPETITION.TITLE" | translate }}</h4>
+                <h4>{{ 'HOME.COMPETITION.TITLE' | translate }}</h4>
               </mdb-card-title>
 
-              <mdb-card-text>{{
-                "HOME.COMPETITION.TEXT" | translate
-              }}</mdb-card-text>
+              <mdb-card-text>{{ 'HOME.COMPETITION.TEXT' | translate }}</mdb-card-text>
+
             </mdb-card-body>
           </mdb-card>
 
           <!-- Contacto -->
           <mdb-card>
-            <mdb-card-img
-              src="https://i.ibb.co/2hsYPdQ/contacts.jpg"
-              alt="Foto durante ICIT2020"
-            ></mdb-card-img>
+            <mdb-card-img src="https://i.ibb.co/2hsYPdQ/contacts.jpg" alt="Foto durante ICIT2020"></mdb-card-img>
             <mdb-card-body>
+
               <mdb-card-title>
-                <h4>{{ "HOME.CONTACTS.TITLE" | translate }}</h4>
+                <h4>{{ 'HOME.CONTACTS.TITLE' | translate }}</h4>
               </mdb-card-title>
 
-              <mdb-card-text>{{
-                "HOME.CONTACTS.TEXT" | translate
-              }}</mdb-card-text>
+              <mdb-card-text>{{ 'HOME.CONTACTS.TEXT' | translate }}</mdb-card-text>
             </mdb-card-body>
           </mdb-card>
         </div>
@@ -156,11 +157,6 @@
 
               <mdb-card-text>{{ "HOME.WIE.TEXT" | translate }}</mdb-card-text>
 
-              <!-- <a class="link-text">
-            <h5 class="waves-light" mdbWavesEffect>{{ 'HOME.SEEMORE' | translate }}
-              <mdb-icon fas icon="chevron-right" class="waves-light" mdbWavesEffect></mdb-icon>
-            </h5>
-          </a> -->
             </mdb-card-body>
           </mdb-card>
 
@@ -186,11 +182,6 @@
                 "HOME.PROGCLUB.TEXT" | translate
               }}</mdb-card-text>
 
-              <!-- <a class="link-text">
-            <h5 class="waves-light" mdbWavesEffect>{{ 'HOME.SEEMORE' | translate }}
-              <mdb-icon fas icon="chevron-right" class="waves-light" mdbWavesEffect></mdb-icon>
-            </h5>
-          </a> -->
             </mdb-card-body>
           </mdb-card>
 
@@ -214,11 +205,6 @@
 
               <mdb-card-text>{{ "HOME.CS.TEXT" | translate }}</mdb-card-text>
 
-              <!-- <a class="link-text">
-            <h5 class="waves-light" mdbWavesEffect>{{ 'HOME.SEEMORE' | translate }}
-              <mdb-icon fas icon="chevron-right" class="waves-light" mdbWavesEffect></mdb-icon>
-            </h5>
-          </a> -->
             </mdb-card-body>
           </mdb-card>
         </div>
