asimov cup spectator form

--- a/src/app/modules/asimov-cup/pages/asimov-cup/asimov-cup.component.css
+++ b/src/app/modules/asimov-cup/pages/asimov-cup/asimov-cup.component.css
@@ -279,6 +279,10 @@ img {
   margin-top: 0.5rem;
 }
 
+.spectator-button {
+  font-size: 1rem !important;
+}
+
 .no-shadow {
   box-shadow: none !important;
 }
