--- a/src/app/modules/asimov-cup/pages/asimov-cup/asimov-cup.component.html
+++ b/src/app/modules/asimov-cup/pages/asimov-cup/asimov-cup.component.html
@@ -52,7 +52,13 @@
             >
           </li>
         </ul>
+        <br />
         <p>{{ "ASIMOVCUP.DESC.SECTION.3.TEXT" | translate }}</p>
+        <button class="enroll-button spectator-button">
+          <a href="https://forms.gle/mNCnbf4A5TCftVn38" class="button-text">
+            {{ "ASIMOVCUP.DESC.SECTION.3.SPECTATEENROLL" | translate }}
+          </a>
+        </button>
       </div>
     </div>
 
