--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,51 +1,82 @@
 <!--Navbar-->
-<mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark" id="nav" mdbStickyHeader>
-
+<mdb-navbar
+  SideClass="navbar navbar-expand-lg navbar-dark"
+  id="nav"
+  mdbStickyHeader
+>
   <!-- Navbar brand -->
-  <mdb-navbar-brand><a class="navbar-brand" href="/home"><img
-        src="https://i.ibb.co/qRDPTRx/IEEE-Logo-No-Text-Darkest.png" height="60vmin" alt="Icon IEEE-ITBA"></a>
+  <mdb-navbar-brand
+    ><a class="navbar-brand" href="/home"
+      ><img
+        src="https://i.ibb.co/qRDPTRx/IEEE-Logo-No-Text-Darkest.png"
+        height="60vmin"
+        alt="Icon IEEE-ITBA"
+    /></a>
   </mdb-navbar-brand>
 
   <!-- All Items -->
-  <links>
-
+  <links id="myNavItems">
     <!-- Menu -->
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <button onclick="window.location.href = '/noticias'" class="buttonNavbar" type="button">{{ 'NAVBAR.NEWS' |
-          translate
-          }}</button>
+        <button
+          onclick="window.location.href = '/noticias'"
+          class="buttonNavbar"
+          type="button"
+        >
+          {{ "NAVBAR.NEWS" | translate }}
+        </button>
       </li>
       <li class="nav-item">
-        <button onclick="window.location.href = '/events'" class="buttonNavbar" type="button">{{ 'NAVBAR.EVENTS' |
-          translate
-          }}</button>
+        <button
+          onclick="window.location.href = '/events'"
+          class="buttonNavbar"
+          type="button"
+        >
+          {{ "NAVBAR.EVENTS" | translate }}
+        </button>
       </li>
       <li class="nav-item">
-        <button onclick="window.location.href = '/sponsors'" class="buttonNavbar" type="button">{{ 'NAVBAR.SPONSORS' |
-          translate
-          }}</button>
+        <button
+          onclick="window.location.href = '/sponsors'"
+          class="buttonNavbar"
+          type="button"
+        >
+          {{ "NAVBAR.SPONSORS" | translate }}
+        </button>
       </li>
       <li class="nav-item">
-        <button class="buttonNavbar" type="button" [matMenuTriggerFor]="institutionalMenu">{{ 'NAVBAR.INSTITUTIONAL' | translate }}</button>
+        <button
+          class="buttonNavbar"
+          type="button"
+          [matMenuTriggerFor]="institutionalMenu"
+        >
+          {{ "NAVBAR.INSTITUTIONAL" | translate }}
+        </button>
       </li>
-      <mat-menu #institutionalMenu="matMenu" xPosition="before" yPosition="below">
-        <button mat-menu-item [routerLink]="['/team']">{{ 'NAVBAR.TEAM' | translate }}</button>
-        <button mat-menu-item onclick="window.location.href = 'https://csitba.web.app/'">CS</button>
-        <button mat-menu-item onclick="window.location.href = 'https://linktr.ee/wie_itba'">WIE</button>
-      </mat-menu>
+
       <li class="nav-item">
-        <button onclick="window.location.href = '/contact'" class="buttonNavbar" type="button">{{ 'NAVBAR.CONTACT' |
-          translate
-          }}</button>
+        <button
+          onclick="window.location.href = '/contact'"
+          class="buttonNavbar"
+          type="button"
+        >
+          {{ "NAVBAR.CONTACT" | translate }}
+        </button>
       </li>
       <li class="nav-item" *ngIf="journalist">
-        <button onclick="window.location.href = '/write-news'" class="buttonNavbar" type="button">{{ 'WRITE-NEW.TITLE' | translate }}</button>
+        <button
+          onclick="window.location.href = '/write-news'"
+          class="buttonNavbar"
+          type="button"
+        >
+          {{ "WRITE-NEW.TITLE" | translate }}
+        </button>
       </li>
     </ul>
 
     <!-- Icons on right -->
-    <ul class="navbar-nav ml-auto nav-flex-icons">
+    <ul class="navbar-nav ml-auto nav-last">
       <li class="nav-item">
         <a href="https://www.linkedin.com/company/ieee-itba" class="nav-link">
           <i class="fab fa-linkedin-in"></i>
@@ -58,27 +89,61 @@
       </li>
       <!-- Language toggle button -->
       <li class="nav-item">
-        <mat-button-toggle-group appearance="legacy" name="fontStyle" aria-label="Font Style">
-          <mat-button-toggle class="es-en-button" value="es" checked=true (click)="useLanguage('es')">es</mat-button-toggle>
-          <mat-button-toggle class="es-en-button" value="en" (click)="useLanguage('en')">en</mat-button-toggle>
+        <mat-button-toggle-group
+          appearance="legacy"
+          name="fontStyle"
+          aria-label="Font Style"
+        >
+          <mat-button-toggle
+            class="es-en-button"
+            value="es"
+            checked="true"
+            (click)="useLanguage('es')"
+            >es</mat-button-toggle
+          >
+          <mat-button-toggle
+            class="es-en-button"
+            value="en"
+            (click)="useLanguage('en')"
+            >en</mat-button-toggle
+          >
         </mat-button-toggle-group>
       </li>
       <!-- Dropdown -->
       <li class="nav-item">
-        <a [matMenuTriggerFor]="menu" class="nav-link">
-          <i class="fas fa-user-circle" style="font-size: large;"></i>
-          <div id="account" style="display: inline;"></div>
+        <a [matMenuTriggerFor]="menu" class="nav-link altButtonNavbar">
+          <i class="fas fa-user-circle" style="font-size: large"></i>
+          <div id="account" style="display: inline"></div>
         </a>
       </li>
-
     </ul>
-
   </links>
-
 </mdb-navbar>
-
+<mat-menu #institutionalMenu="matMenu" xPosition="before" yPosition="below">
+  <button mat-menu-item [routerLink]="['/team']">
+    {{ "NAVBAR.TEAM" | translate }}
+  </button>
+  <button
+    mat-menu-item
+    onclick="window.location.href = 'https://csitba.web.app/'"
+  >
+    CS
+  </button>
+  <button
+    mat-menu-item
+    onclick="window.location.href = 'https://linktr.ee/wie_itba'"
+  >
+    WIE
+  </button>
+</mat-menu>
 <mat-menu #menu="matMenu" xPosition="before" yPosition="below">
-  <button mat-menu-item *ngIf="logguedIn" (click)="logoutUser()">{{ 'LOGOUT.TITLE' | translate }}</button>
-  <button mat-menu-item *ngIf="!logguedIn" [routerLink]="['/login']">{{ 'LOGIN.TITLE' | translate }}</button>
-  <button mat-menu-item *ngIf="!logguedIn" [routerLink]="['/register']">{{ 'REGISTER.TITLE' | translate }}</button>
+  <button mat-menu-item *ngIf="logguedIn" (click)="logoutUser()">
+    {{ "LOGOUT.TITLE" | translate }}
+  </button>
+  <button mat-menu-item *ngIf="!logguedIn" [routerLink]="['/login']">
+    {{ "LOGIN.TITLE" | translate }}
+  </button>
+  <button mat-menu-item *ngIf="!logguedIn" [routerLink]="['/register']">
+    {{ "REGISTER.TITLE" | translate }}
+  </button>
 </mat-menu>
