--- a/src/app/modules/asimov-cup/pages/asimov-cup/asimov-cup.component.html
+++ b/src/app/modules/asimov-cup/pages/asimov-cup/asimov-cup.component.html
@@ -76,6 +76,12 @@
           {{ "ASIMOVCUP.D_AND_L.TEXT_2" | translate }}
         </p>
       </div>
+      <div class="image-section">
+        <img
+          src="../../../../../assets/image/content/PlanoITBA2.png"
+          alt="PlanoITBA2"
+        />
+      </div>
     </div>
 
     <!-- SCHEDULE section -->
@@ -107,6 +113,15 @@
           <p class="faq-answer">{{ qa.a | translate }}</p>
         </mat-expansion-panel>
       </mat-accordion>
+    </div>
+
+    <div class="sponsor-section" id="sponsorship">
+      <h2 class="subtitle">{{ "ASIMOVCUP.SPONSORS" | translate }}</h2>
+      <img
+        src="../../../../../assets/image/content/Schneider Logo.png"
+        height="65vmin"
+        alt="Logo Schneider Electric"
+      />
     </div>
 
     <app-footer></app-footer>
