--- a/src/app/modules/mainpage/pages/mainpage/mainpage.component.html
+++ b/src/app/modules/mainpage/pages/mainpage/mainpage.component.html
@@ -1,259 +1,296 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Home</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home</title>
-</head>
+  <header>
+    <app-navbar></app-navbar>
+    <div class="banner">
+      <img
+        src="../../../../../assets/image/banner6.jpg"
+        alt="IEEE ITBA"
+        class="max-width"
+      />
+      <div class="main-title">ITBA IEEE</div>
+      <div class="subtitle">Student Branch</div>
+    </div>
+  </header>
 
-<header>
-  <app-navbar></app-navbar>
-  <div class="banner">
-    <img src="../../../../../assets/image/banner6.jpg" alt="IEEE ITBA" class="max-width">
-    <div class="main-title">ITBA IEEE</div>
-    <div class="subtitle">Student Branch</div>
-  </div>
-</header>
+  <!-- Inicio -->
 
-
-
-<!-- Inicio -->
-
-
-<body>
-  <!-- IEEENews -->
-  <div *ngIf="true">
-    <mat-card class="news-container">
-      <mat-card-header>
-        <div class="row news-header">
-          <div class="col news-logo">
-            <a class="link-text" [routerLink]="['/noticias']">
-              <img src="../../../../../assets/image/IEEENews_sin_fondo.png" class="news-logo">
-              <h3 class="news-container-title">{{ 'HOME.IEEENEWS.TITLE' | translate }}</h3>
-            </a>
-          </div>
-          <div class="col">
-            <p class="news-content-flavor">
-              {{ 'HOME.IEEENEWS.CONTENT' | translate }}
+  <body>
+    <!-- IEEENews -->
+    <div *ngIf="true">
+      <mat-card class="news-container">
+        <mat-card-header>
+          <div class="row news-header">
+            <div class="col news-logo">
               <a class="link-text" [routerLink]="['/noticias']">
-                <h4 class="h4 waves-light" mdbWavesEffect>{{ 'HOME.SEEMORE' | translate }}
-                  <mdb-icon fas icon="chevron-right" class="waves-light" mdbWavesEffect></mdb-icon>
-                </h4>
+                <img
+                  src="../../../../../assets/image/IEEENews_sin_fondo.png"
+                  class="news-logo"
+                />
+                <h3 class="news-container-title">
+                  {{ "HOME.IEEENEWS.TITLE" | translate }}
+                </h3>
               </a>
-            </p>
-
+            </div>
+            <div class="col">
+              <p class="news-content-flavor">
+                {{ "HOME.IEEENEWS.CONTENT" | translate }}
+                <a class="link-text" [routerLink]="['/noticias']">
+                  <h4 class="h4 waves-light" mdbWavesEffect>
+                    {{ "HOME.SEEMORE" | translate }}
+                    <mdb-icon
+                      fas
+                      icon="chevron-right"
+                      class="waves-light"
+                      mdbWavesEffect
+                    ></mdb-icon>
+                  </h4>
+                </a>
+              </p>
+            </div>
           </div>
-        </div>
-      </mat-card-header>
+        </mat-card-header>
 
-      <div *ngIf="showLoadingSpinner">
-        <app-loading-spinner></app-loading-spinner>
-      </div>
-      <div *ngIf="latestNews">
-        <owl-carousel-o [options]="customOptions">
-          <ng-container *ngFor="let noticia of latestNews">
-            <ng-template carouselSlide >
+        <div *ngIf="showLoadingSpinner">
+          <app-loading-spinner></app-loading-spinner>
+        </div>
+        <div *ngIf="latestNews">
+          <owl-carousel-o [options]="customOptions">
+            <ng-container *ngFor="let noticia of latestNews">
+              <ng-template carouselSlide>
                 <app-news-card [noticia]="noticia"></app-news-card>
-            </ng-template>
-          </ng-container>
-        </owl-carousel-o>
-      </div>
-
-    </mat-card>
-
-  </div>
-
-
-  <!-- Educacion, Competencia, Contacto -->
-  <div *ngIf="false">
-    <div class="bottomLine">
-      <div class="card-group">
-
-        <!-- Educacion -->
-        <mdb-card>
-          <mdb-card-img src="https://i.ibb.co/6mLnt2t/education.jpg" alt="Foto de Curso de Python"></mdb-card-img>
-          <mdb-card-body>
-
-            <mdb-card-title>
-              <h4>{{ 'HOME.EDUCATION.TITLE' | translate }}</h4>
-            </mdb-card-title>
-
-            <mdb-card-text>{{ 'HOME.EDUCATION.TEXT' | translate }}</mdb-card-text>
-
-          </mdb-card-body>
-        </mdb-card>
-
-        <!-- Competencia -->
-        <mdb-card>
-          <mdb-card-img src="https://i.ibb.co/YX53J4W/competition.jpg" alt="Foto de Competencia de programacion">
-          </mdb-card-img>
-          <mdb-card-body>
-
-            <mdb-card-title>
-              <h4>{{ 'HOME.COMPETITION.TITLE' | translate }}</h4>
-            </mdb-card-title>
-
-            <mdb-card-text>{{ 'HOME.COMPETITION.TEXT' | translate }}</mdb-card-text>
-
-          </mdb-card-body>
-        </mdb-card>
-
-        <!-- Contacto -->
-        <mdb-card>
-          <mdb-card-img src="https://i.ibb.co/2hsYPdQ/contacts.jpg" alt="Foto durante ICIT2020"></mdb-card-img>
-          <mdb-card-body>
-
-            <mdb-card-title>
-              <h4>{{ 'HOME.CONTACTS.TITLE' | translate }}</h4>
-            </mdb-card-title>
-
-            <mdb-card-text>{{ 'HOME.CONTACTS.TEXT' | translate }}</mdb-card-text>
-
-          </mdb-card-body>
-        </mdb-card>
-      </div>
-    </div>
-  </div>
-
-
-
-  <div *ngIf="false">
-    <!-- Iniciativas -->
-    <div class="bottomLine">
-      <h1 id="iniciativas">{{ 'NAVBAR.INITIATIVES' | translate }}</h1>
-      <div class="card-group">
-
-        <!-- WIE -->
-        <mdb-card>
-          <div class="view overlay waves-light" mdbWavesEffect>
-            <mdb-card-img src="./../../assets/image/logos/wie.jpg"></mdb-card-img>
-            <a>
-              <div class="mask rgba-white-slight"></div>
-            </a>
-          </div>
-
-          <mdb-card-body>
-
-            <mdb-card-title>
-              <h4>{{ 'HOME.WIE.TITLE' | translate }}</h4>
-            </mdb-card-title>
-
-            <hr>
-
-            <mdb-card-text>{{ 'HOME.WIE.TEXT' | translate }}</mdb-card-text>
-
-            <!-- <a class="link-text">
-            <h5 class="waves-light" mdbWavesEffect>{{ 'HOME.SEEMORE' | translate }}
-              <mdb-icon fas icon="chevron-right" class="waves-light" mdbWavesEffect></mdb-icon>
-            </h5>
-          </a> -->
-          </mdb-card-body>
-
-        </mdb-card>
-
-        <!--Club de Programadores-->
-        <mdb-card>
-          <div class="view overlay waves-light" mdbWavesEffect>
-            <mdb-card-img src="https://i.ibb.co/XkZVrrz/progteam.jpg"></mdb-card-img>
-            <a>
-              <div class="mask rgba-white-slight"></div>
-            </a>
-          </div>
-
-          <mdb-card-body>
-
-            <mdb-card-title>
-              <h4>{{ 'HOME.PROGCLUB.TITLE' | translate }}</h4>
-            </mdb-card-title>
-
-            <hr>
-
-            <mdb-card-text>{{ 'HOME.PROGCLUB.TEXT' | translate }}</mdb-card-text>
-
-            <!-- <a class="link-text">
-            <h5 class="waves-light" mdbWavesEffect>{{ 'HOME.SEEMORE' | translate }}
-              <mdb-icon fas icon="chevron-right" class="waves-light" mdbWavesEffect></mdb-icon>
-            </h5>
-          </a> -->
-          </mdb-card-body>
-
-        </mdb-card>
-
-        <!--Computer Society-->
-        <mdb-card>
-          <div class="view overlay waves-light" mdbWavesEffect>
-            <mdb-card-img src="https://i.ibb.co/QPcgkLJ/cs.jpg"></mdb-card-img>
-            <a>
-              <div class="mask rgba-white-slight"></div>
-            </a>
-          </div>
-
-          <mdb-card-body>
-
-            <mdb-card-title>
-              <h4>{{ 'HOME.CS.TITLE' | translate }}</h4>
-            </mdb-card-title>
-
-            <hr>
-
-            <mdb-card-text>{{ 'HOME.CS.TEXT' | translate }}</mdb-card-text>
-
-            <!-- <a class="link-text">
-            <h5 class="waves-light" mdbWavesEffect>{{ 'HOME.SEEMORE' | translate }}
-              <mdb-icon fas icon="chevron-right" class="waves-light" mdbWavesEffect></mdb-icon>
-            </h5>
-          </a> -->
-          </mdb-card-body>
-
-        </mdb-card>
-
-      </div>
-    </div>
-  </div>
-
-  <!-- Sponsors Actuales -->
-  <div class="bottomLine mt-4">
-    <div class="row">
-      <h1 class="section-title">{{ "HOME.SPONSORS" | translate }}</h1>
-
-      <br>
-
-      <div class="container">
-        <div class="row" style="margin-top: 2vmin;">
-            <div class="col-sm mt-5 mt-md-2">
-                <img src="../../../../../assets/image/content/jpmorgan.png" height="90vmin" alt="Logo jpmorgan"
-                     style="position: relative; top: 50%; transform: translateY(-50%);">
-            </div>
-            <div class="col-sm mt-5 mt-md-2">
-                <img src="../../../../../assets/image/content/innovid.png" height="35vmin" alt="Logo Innovid"
-                     style="position: relative; top: 50%; transform: translateY(-50%);">
-            </div>
+              </ng-template>
+            </ng-container>
+          </owl-carousel-o>
         </div>
-        <div class="row">
-            <div class="col-sm mt-5 mt-md-4">
-                <img src="../../../../../assets/image/content/pan-american-energy.png" height="100vmin" alt="Logo Axion Energy"
-                     style="position: relative; top: 50%; transform: translateY(-50%);">
-            </div>
-            <div class="col-sm mt-5 mt-md-4">
-                <img src="../../../../../assets/image/content/axion-energy.png" height="100vmin" alt="Logo Axion Energy"
-                     style="position: relative; top: 50%; transform: translateY(-50%);">
-            </div>
-            <div class="col-sm mt-5 mt-md-4">
-                <img src="../../../../../assets/image/content/flowics_logo-horizontal-full-color.png" height="70vmin" alt="Logo flowics"
-                     style="position: relative; top: 50%; transform: translateY(-50%); ">
-            </div>    
+      </mat-card>
+    </div>
+
+    <!-- Educacion, Competencia, Contacto -->
+    <div *ngIf="false">
+      <div class="bottomLine">
+        <div class="card-group">
+          <!-- Educacion -->
+          <mdb-card>
+            <mdb-card-img
+              src="https://i.ibb.co/6mLnt2t/education.jpg"
+              alt="Foto de Curso de Python"
+            ></mdb-card-img>
+            <mdb-card-body>
+              <mdb-card-title>
+                <h4>{{ "HOME.EDUCATION.TITLE" | translate }}</h4>
+              </mdb-card-title>
+
+              <mdb-card-text>{{
+                "HOME.EDUCATION.TEXT" | translate
+              }}</mdb-card-text>
+            </mdb-card-body>
+          </mdb-card>
+
+          <!-- Competencia -->
+          <mdb-card>
+            <mdb-card-img
+              src="https://i.ibb.co/YX53J4W/competition.jpg"
+              alt="Foto de Competencia de programacion"
+            >
+            </mdb-card-img>
+            <mdb-card-body>
+              <mdb-card-title>
+                <h4>{{ "HOME.COMPETITION.TITLE" | translate }}</h4>
+              </mdb-card-title>
+
+              <mdb-card-text>{{
+                "HOME.COMPETITION.TEXT" | translate
+              }}</mdb-card-text>
+            </mdb-card-body>
+          </mdb-card>
+
+          <!-- Contacto -->
+          <mdb-card>
+            <mdb-card-img
+              src="https://i.ibb.co/2hsYPdQ/contacts.jpg"
+              alt="Foto durante ICIT2020"
+            ></mdb-card-img>
+            <mdb-card-body>
+              <mdb-card-title>
+                <h4>{{ "HOME.CONTACTS.TITLE" | translate }}</h4>
+              </mdb-card-title>
+
+              <mdb-card-text>{{
+                "HOME.CONTACTS.TEXT" | translate
+              }}</mdb-card-text>
+            </mdb-card-body>
+          </mdb-card>
         </div>
       </div>
-
-
     </div>
-  </div>
 
+    <div *ngIf="false">
+      <!-- Iniciativas -->
+      <div class="bottomLine">
+        <h1 id="iniciativas">{{ "NAVBAR.INITIATIVES" | translate }}</h1>
+        <div class="card-group">
+          <!-- WIE -->
+          <mdb-card>
+            <div class="view overlay waves-light" mdbWavesEffect>
+              <mdb-card-img
+                src="./../../assets/image/logos/wie.jpg"
+              ></mdb-card-img>
+              <a>
+                <div class="mask rgba-white-slight"></div>
+              </a>
+            </div>
 
+            <mdb-card-body>
+              <mdb-card-title>
+                <h4>{{ "HOME.WIE.TITLE" | translate }}</h4>
+              </mdb-card-title>
 
-</body>
-<app-footer></app-footer>
+              <hr />
 
+              <mdb-card-text>{{ "HOME.WIE.TEXT" | translate }}</mdb-card-text>
 
+              <!-- <a class="link-text">
+            <h5 class="waves-light" mdbWavesEffect>{{ 'HOME.SEEMORE' | translate }}
+              <mdb-icon fas icon="chevron-right" class="waves-light" mdbWavesEffect></mdb-icon>
+            </h5>
+          </a> -->
+            </mdb-card-body>
+          </mdb-card>
+
+          <!--Club de Programadores-->
+          <mdb-card>
+            <div class="view overlay waves-light" mdbWavesEffect>
+              <mdb-card-img
+                src="https://i.ibb.co/XkZVrrz/progteam.jpg"
+              ></mdb-card-img>
+              <a>
+                <div class="mask rgba-white-slight"></div>
+              </a>
+            </div>
+
+            <mdb-card-body>
+              <mdb-card-title>
+                <h4>{{ "HOME.PROGCLUB.TITLE" | translate }}</h4>
+              </mdb-card-title>
+
+              <hr />
+
+              <mdb-card-text>{{
+                "HOME.PROGCLUB.TEXT" | translate
+              }}</mdb-card-text>
+
+              <!-- <a class="link-text">
+            <h5 class="waves-light" mdbWavesEffect>{{ 'HOME.SEEMORE' | translate }}
+              <mdb-icon fas icon="chevron-right" class="waves-light" mdbWavesEffect></mdb-icon>
+            </h5>
+          </a> -->
+            </mdb-card-body>
+          </mdb-card>
+
+          <!--Computer Society-->
+          <mdb-card>
+            <div class="view overlay waves-light" mdbWavesEffect>
+              <mdb-card-img
+                src="https://i.ibb.co/QPcgkLJ/cs.jpg"
+              ></mdb-card-img>
+              <a>
+                <div class="mask rgba-white-slight"></div>
+              </a>
+            </div>
+
+            <mdb-card-body>
+              <mdb-card-title>
+                <h4>{{ "HOME.CS.TITLE" | translate }}</h4>
+              </mdb-card-title>
+
+              <hr />
+
+              <mdb-card-text>{{ "HOME.CS.TEXT" | translate }}</mdb-card-text>
+
+              <!-- <a class="link-text">
+            <h5 class="waves-light" mdbWavesEffect>{{ 'HOME.SEEMORE' | translate }}
+              <mdb-icon fas icon="chevron-right" class="waves-light" mdbWavesEffect></mdb-icon>
+            </h5>
+          </a> -->
+            </mdb-card-body>
+          </mdb-card>
+        </div>
+      </div>
+    </div>
+
+    <!-- Sponsors Actuales -->
+    <div class="bottomLine mt-4">
+      <div class="row">
+        <h1 class="section-title">{{ "HOME.SPONSORS" | translate }}</h1>
+
+        <br />
+
+        <div class="container">
+          <div class="row" style="margin-top: 2vmin">
+            <div class="col-sm mt-5 mt-md-2">
+              <img
+                src="../../../../../assets/image/content/jpmorgan.png"
+                height="90vmin"
+                alt="Logo jpmorgan"
+                style="
+                  position: relative;
+                  top: 50%;
+                  transform: translateY(-50%);
+                "
+              />
+            </div>
+            <div class="col-sm mt-5 mt-md-2">
+              <img
+                src="../../../../../assets/image/content/Schneider Logo.png"
+                height="70vmin"
+                alt="Logo Schneider Electric"
+                style="
+                  position: relative;
+                  top: 50%;
+                  transform: translateY(-50%);
+                "
+              />
+            </div>
+            <div class="col-sm mt-5 mt-md-2">
+              <img
+                src="../../../../../assets/image/content/innovid.png"
+                height="35vmin"
+                alt="Logo Innovid"
+                style="
+                  position: relative;
+                  top: 50%;
+                  transform: translateY(-50%);
+                "
+              />
+            </div>
+          </div>
+          <!--
+
+          <div class="row">
+            <div class="col-sm mt-5 mt-md-4">
+              <img src="../../../../../assets/image/content/pan-american-energy.png" height="100vmin" alt="Logo Axion Energy"
+                     style="position: relative; top: 50%; transform: translateY(-50%);">
+                    </div>
+            <div class="col-sm mt-5 mt-md-4">
+              <img src="../../../../../assets/image/content/axion-energy.png" height="100vmin" alt="Logo Axion Energy"
+              style="position: relative; top: 50%; transform: translateY(-50%);">
+            </div>
+            <div class="col-sm mt-5 mt-md-4">
+              <img src="../../../../../assets/image/content/flowics_logo-horizontal-full-color.png" height="70vmin" alt="Logo flowics"
+              style="position: relative; top: 50%; transform: translateY(-50%); ">
+            </div>
+        </div>
+      -->
+        </div>
+      </div>
+    </div>
+  </body>
+  <app-footer></app-footer>
 </html>
