updated schedule & sponsors 2022

--- a/src/app/modules/sponsors/pages/sponsors/sponsors.component.html
+++ b/src/app/modules/sponsors/pages/sponsors/sponsors.component.html
@@ -27,6 +27,51 @@
       </div>
 
     <mat-tab-group class="mt-5 group-margin">
+        <mat-tab label="2022">
+            <div class="bottomLine">
+                <div class="container">
+                    <div class="row" style="margin-top: 2vmin;">
+                        <div class="col-sm mt-5 mt-md-2">
+                            <img
+                              src="../../../../../assets/image/content/jpmorgan.png"
+                              height="90vmin"
+                              alt="Logo jpmorgan"
+                              style="
+                                position: relative;
+                                top: 50%;
+                                transform: translateY(-50%);
+                              "
+                            />
+                          </div>
+                          <div class="col-sm mt-5 mt-md-2">
+                            <img
+                              src="../../../../../assets/image/content/Schneider Logo.png"
+                              height="70vmin"
+                              alt="Logo Schneider Electric"
+                              style="
+                                position: relative;
+                                top: 50%;
+                                transform: translateY(-50%);
+                              "
+                            />
+                          </div>
+                          <div class="col-sm mt-5 mt-md-2">
+                            <img
+                              src="../../../../../assets/image/content/innovid.png"
+                              height="35vmin"
+                              alt="Logo Innovid"
+                              style="
+                                position: relative;
+                                top: 50%;
+                                transform: translateY(-50%);
+                              "
+                            />
+                          </div>
+
+                    </div>
+                </div>
+            </div>
+        </mat-tab>
         <mat-tab label="2021">
             <div class="bottomLine">
                 <div class="container">
