--- a/src/app/modules/iot/pages/iot/iot.component.html
+++ b/src/app/modules/iot/pages/iot/iot.component.html
@@ -8,8 +8,14 @@
   <header>
     <app-navbar></app-navbar>
   </header>
-
   <body>
+    <div class="banner">
+      <img
+        src="../../../../../assets/image/courses/iot-banner.jpeg"
+        class="max-width"
+        alt="Asimov Cup - Competencia de Robótica"
+      />
+    </div>
     <div class="topbottomLine" id="home" style="margin-bottom:2%">
         <div class="container">
             <div class="row">
