--- a/src/app/modules/mainpage/pages/mainpage/mainpage.component.css
+++ b/src/app/modules/mainpage/pages/mainpage/mainpage.component.css
@@ -1,5 +1,4 @@
-@import '~swiper/swiper-bundle.css';
-@import '~swiper/swiper.min.css';
+@import '~swiper/swiper-bundle.min.css';
 
 html {
     min-height: 100%;
@@ -15,33 +14,10 @@ body {
     padding-top: 70px;
 }
 
-.whiteRoundedBlock{
-    background-color: whitesmoke;
-    padding: 3%;
-    border-radius: 5vmin;
-    padding: 3vmin;
-}
-
-.topbottomLine {
-    padding-top: 5vmin;
-    padding-bottom: 5vmin;
-    border-top: whitesmoke 2px solid;
-    border-bottom: whitesmoke 2px solid;
-    vertical-align: middle;
-    align-content: center;
-}
-
 .bottomLine {
     padding-top: 5vmin;
     padding-bottom: 5vmin;
     border-bottom: whitesmoke 2px solid;
-    vertical-align: middle;
-    align-content: center;
-}
-
-.noLine{
-    padding-top: 5vmin;
-    padding-bottom: 5vmin;
     vertical-align: middle;
     align-content: center;
 }
@@ -86,66 +62,6 @@ body {
     color: #181818;
 }
 
-
-.card-group-row{
-    display:flex;
-}
-.card-group-col{
-    flex: 1;
-
-    padding: 1em;
-    /*border:solid;*/
-}
-@media screen and (max-width: 700px) {
-    .card-group-row{
-        display: inline-block;
-    }
-    .card-group-col {
-        width: 90%;
-        margin-bottom: 25px;
-    }
-}
-.event-card {
-    margin: auto;
-    height: 100%;
-}
-
-.event-card-img {
-    width: 100%;
-}
-
-.ieeextreme-filter {
-    filter: sepia(100%) hue-rotate(190deg) saturate(500%) brightness(60%);
-}
-.ieeextreme-text {
-    top: 60%;
-}
-
-.cursopython-filter {
-    filter: sepia(100%) hue-rotate(308deg) saturate(500%) brightness(60%);
-}
-
-.cursopython-text {
-    top: 10%;
-}
-
-
-.image-with-text {
-    position: relative;
-    width: 100%;
-}
-.text-on-image {
-    position:absolute;
-    text-align: center;
-    /*top: 50%;*/
-    width: 100%;
-    /*font-size: min(4rem, 5vw);*/
-    font-size: calc(4vw);
-    font-weight: 900;
-    color: rgba(255, 255, 255, 1);
-    letter-spacing: 1px;
-}
-
 mdb-card {
     border-bottom-left-radius: 5vmin;
     border-bottom-right-radius: 5vmin;
@@ -164,43 +80,10 @@ h1 {
     color: whitesmoke;
     font-size: 5vmin;
 }
+
 h2{
     color: whitesmoke;
     font-size: 3vmin;
-}
-.full-height{
-    height:100%;
-}
-.addMargin{
-    margin:80px;
-}
-.right {
-    text-align: right;
-}
-
-#mailus {
-    color: whitesmoke;
-    font-size: 15vmin;
-}
-
-.whitebckg {
-    background-color: transparent;
-    color: whitesmoke;
-}
-
-#logotext{
-    white-space: nowrap;
-    font-family: 'Roboto', sans-serif;
-    text-align: left;
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
-}
-.maxwidth600{
-    max-width: 600px;
-}
-.maxwidth400{
-    max-width: 400px;
 }
 
 .max-width{
