--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -31,6 +31,7 @@
       </li>
       <mat-menu #institutionalMenu="matMenu" xPosition="before" yPosition="below">
         <button mat-menu-item [routerLink]="['/team']">{{ 'NAVBAR.TEAM' | translate }}</button>
+        <button mat-menu-item [routerLink]="['/ras']">RAS</button>
         <button mat-menu-item onclick="window.location.href = 'https://csitba.web.app/'">CS</button>
         <button mat-menu-item onclick="window.location.href = 'https://linktr.ee/wie_itba'">WIE</button>
       </mat-menu>
